# setav-II

./: README.md  Siml.Readme.odt
Lane Detection with middle curve approximation/: Readme.md  lane detection v3.py  lane detection v4.py  lane detection v5.py
Lane Detection with middle curve approximation/src/lane_detection_hough_transform/: package.xml  setup.cfg  setup.py
Lane Detection with middle curve approximation/src/lane_detection_hough_transform/lane_detection_hough_transform/: laneDetection.py
Lane detection without hough transform/: Readme.md  lane detection using sliding window approach.py  lane detection v3.py
Object Detection/: Readme.md  detection_script.py  lidar.py  lidarCameraFusion-cloud.py  lidarCameraFusion.py  objectDetection.py  visualize.py
YoloV7 dataset labelling script/: compressed_image_subscriber.py  labellingScript.py
calibration/: calibrate.py
car_control_publisher/: package.xml  setup.cfg  setup.py
car_lane_assist_node/: A*.py  A*SAngle.py  package.xml  setup.cfg  setup.py
deployment/: car.py  control_GUI.py  control_frame.py  control_interface.py  deploy.py  emulated_Car.py  image_subscriber.py  monitor_GUI.py  setup_frame.py  setup_interface.py  start_RPi_EV3_control.sh  start_camera_lidar.sh  start_camera_lidar_fusion.sh  start_connections.sh  start_ev3serv.sh  start_lane_assistance_publisher.sh  start_lane_detection_publisher.sh  start_lane_detection_publisher_hough.sh  start_raspi_listener.sh  widget_with_tkinter.py
ev3_control/: direct_control_curtsies.py  direct_control_pynput.py  direct_control_pynput_mult.py  (+8 more)
(+149 files in other folders)
